--- a/sjtuthesis.cfg
+++ b/sjtuthesis.cfg
@@ -6,22 +6,43 @@
 \ProvidesFile{sjtuthesis.cfg}[2016/04/06 v0.9 sjtuthesis configuration file]
 
 %% 目录、插图索引、表格索引
-\def\sjtu@contentsname{目~~~~录}
-\def\sjtu@listfigurename{插图索引}
-\def\sjtu@listtablename{表格索引}
-\def\sjtu@listalgorithmname{算法索引}
+\def\sjtu@contentsname{Content}
+\def\sjtu@listfigurename{Figure Index}
+\def\sjtu@listtablename{Table Index}
+\def\sjtu@listalgorithmname{Algorithm Index}
 
 %%
 %% labels in the title page
 %%
-\def\sjtu@label@major{专业}
+%\def\sjtu@label@major{专业}
 \def\sjtu@label@title{论文题目}
-\def\sjtu@label@author{论文作者}
-\def\sjtu@label@thesis{学位论文}
-\def\sjtu@label@advisor{导师}
-\def\sjtu@label@coadvisor{副导师}
-\def\sjtu@label@defenddate{答辩日期}
-\def\sjtu@label@studentnumber{学号}
+%\def\sjtu@label@author{论文作者}
+%\def\sjtu@label@thesis{学位论文}
+%\def\sjtu@label@advisor{导师}
+%\def\sjtu@label@coadvisor{副导师}
+%\def\sjtu@label@defenddate{答辩日期}
+%\def\sjtu@label@studentnumber{学号}
+\def\sjtu@label@bacheloreng{BACHELOR'S THESIS}
+\def\sjtu@label@sjtu{SHANGHAI JIAO TONG UNIVERSITY}
+
+%%
+%% labels and values used in title page for english version
+%%
+\def\sjtu@label@studentname{学生姓名：}
+\def\sjtu@label@studentnumber{学生学号：}
+\def\sjtu@label@major{专~~~~~~~~业：}
+\def\sjtu@label@advisor{指导教师：}
+\def\sjtu@label@institution{学院(系)：}
+
+\def\sjtu@value@studentname{某某}
+\def\sjtu@value@studentnumber{512XXXXXXXX}
+\def\sjtu@value@major{Your major}
+\def\sjtu@value@advisor{Your advisor}
+\def\sjtu@value@institution{Your affiliation}
+
+
+
+
 
 %%
 %% string values filled in the title page
@@ -48,7 +69,7 @@
     \fi 
   \fi
 \fi
-\def\sjtu@label@statement{申请\sjtu@value@school\sjtu@value@chinesedegree\sjtu@label@thesis} 
+\def\sjtu@label@statement{学士学位论文} 
 
 % 论文原创性声明
 \def\sjtu@label@original{学位论文原创性声明}
@@ -84,54 +105,59 @@
 \def\sjtu@label@englishkeywords{KEY WORDS:~}
 
 %% labels in the summary
-\def\sjtu@label@summary{全文总结}
+\def\sjtu@label@summary{Summary}
 
 %%
 %% labels in the publications
 %%
-\def\sjtu@label@publications{攻读学位期间发表的学术论文}
+%\def\sjtu@label@publications{攻读学位期间发表的学术论文}
+%\def\sjtu@label@publications{Publications During Studying Bachelor's Degree}
+\def\sjtu@label@publications{Publication}
 
 %%
 %% labels in the publications
 %%
-\def\sjtu@label@patents{攻读学位期间申请的专利}
+%\def\sjtu@label@patents{攻读学位期间申请的专利}
+%\def\sjtu@label@patents{Applied Patents During Studying Bachelor's Degree}
+\def\sjtu@label@patents{Applied Patents}
 
 %%
 %% labels in the projects
 %%
-\def\sjtu@label@projects{攻读学位期间参与的项目}
+%\def\sjtu@label@projects{攻读学位期间参与的项目}
+\def\sjtu@label@projects{Projects}
 
 
 %%
 %% labels in the resume
 %%
-\def\sjtu@label@resume{简~~~~历}
-
+%\def\sjtu@label@resume{简~~~~历}
+\def\sjtu@label@resume{Resume}
 
 %%
 %% labels in the thanks
 %%
-\def\sjtu@label@thanks{致~~~~谢}
+\def\sjtu@label@thanks{Acknowledgement}
 
 %%%
 %% listings name
 %%
-\def\sjtu@value@listingname{代码}
+\def\sjtu@value@listingname{Source Code}
 
 %%
 %% the theorem name definitions
 %%
-\def\sjtu@label@algo{算法}
-\def\sjtu@label@thm{定理}
-\def\sjtu@label@lem{引理}
-\def\sjtu@label@prop{命题}
-\def\sjtu@label@cor{推论}
-\def\sjtu@label@defn{定义}
-\def\sjtu@label@conj{猜想}
-\def\sjtu@label@exmp{例}
-\def\sjtu@label@rem{注}
-\def\sjtu@label@case{情形}
-\def\sjtu@label@proof{证明}
+\def\sjtu@label@algo{Algorithm}
+\def\sjtu@label@thm{Theorm}
+\def\sjtu@label@lem{Lemma}
+\def\sjtu@label@prop{Proposition}
+\def\sjtu@label@cor{Corollary}
+\def\sjtu@label@defn{Definition}
+\def\sjtu@label@conj{Conjecture}
+\def\sjtu@label@exmp{Example}
+\def\sjtu@label@rem{Rem}
+\def\sjtu@label@case{Case}
+\def\sjtu@label@proof{Proof}
 
 \endinput
 
