fix mismatches between some label name

--- a/sjtuthesis.cfg
+++ b/sjtuthesis.cfg
@@ -28,17 +28,17 @@
 %%
 %% labels and values used in title page for english version
 %%
-\def\sjtu@label@studentname{学生姓名：}
+\def\sjtu@label@author{学生姓名：}
 \def\sjtu@label@studentnumber{学生学号：}
 \def\sjtu@label@major{专~~~~~~~~业：}
 \def\sjtu@label@advisor{指导教师：}
-\def\sjtu@label@institution{学院(系)：}
+\def\sjtu@label@institute{学院(系)：}
 
-\def\sjtu@value@studentname{某某}
+\def\sjtu@value@author{某某}
 \def\sjtu@value@studentnumber{512XXXXXXXX}
 \def\sjtu@value@major{Your major}
 \def\sjtu@value@advisor{Your advisor}
-\def\sjtu@value@institution{Your affiliation}
+\def\sjtu@value@institute{Your affiliation}
 
 
 
